--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "element-ui": "^2.13.1",
     "js-cookie": "2.2.0",
     "loadsh": "^0.0.4",
+    "mammoth": "^1.4.9",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "v-distpicker": "^1.2.6",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
+    "vuedraggable": "^2.24.0",
     "vuex": "3.0.1",
     "wangeditor": "^3.1.1"
   },
